# PyraMeth

./: BUILD.md  Cargo.toml  MANIFEST.in  README.md  README.rst  environment.yml  requirements.txt  setup.py
.cargo/: config.toml
crates/ds3/: Cargo.toml
crates/ds3-core/: Cargo.toml
crates/ds3-core/src/: error.rs  features.rs  lib.rs  signal.rs
crates/ds3-core/src/io/: bam.rs  pod5.rs  slow5.rs
crates/ds3-model/: Cargo.toml  build.rs
crates/ds3-model/src/: aggr.rs  inference.rs  lib.rs  pipeline.rs
crates/ds3/src/: call_freq.rs  call_mods.rs  extract.rs  main.rs
crates/pyrameth/: Cargo.toml
crates/pyrameth-core/: Cargo.toml
crates/pyrameth-core/src/: cigar.rs  error.rs  features.rs  kmer.rs  lib.rs
crates/pyrameth-core/src/io/: bam.rs  mod.rs  pod5.rs  slow5.rs
crates/pyrameth-model/: Cargo.toml  build.rs
crates/pyrameth-model/src/: aggr.rs  inference.rs  lib.rs  pipeline.rs
crates/pyrameth/src/: call_freq.rs  call_mods.rs  extract.rs  main.rs
model/: r1041_4khz_5mC_site.ckpt  r1041_5khz_5mC_site.ckpt
pyrameth/: __init__.py  _version.py  call_modifications.py  call_mods_bam.py  call_mods_freq.py  dataloader.py  denoise.py  extract_features_pod5.py  models.py  pyrameth.py  train.py  train_multigpu.py  utils_dataloader.py
pyrameth/model/: human_r1041_5khz_CG_site.ckpt  r1041_4khz_5mC_site.ckpt
pyrameth/utils/: __init__.py  bam_reader.py  process_utils.py  sampling.py  utils_mtm.py
scripts/: export_torchscript.py
