[workspace]
members  = ["crates/pyrameth-core", "crates/pyrameth-model", "crates/pyrameth"]
resolver = "2"

# ── workspace-wide shared dependency versions ────────────────────────────────
[workspace.dependencies]
thiserror         = "1"
anyhow            = "1"
log               = "0.4"
env_logger        = "0.11"
crossbeam-channel = "0.5"
rayon             = "1"
clap              = { version = "4", features = ["derive"] }
pyrameth-core          = { path = "crates/pyrameth-core" }
pyrameth-model         = { path = "crates/pyrameth-model" }

# ── release profile: maximise throughput ────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
