[package]
name    = "pyrameth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pyrameth"
path = "src/main.rs"

[dependencies]
pyrameth-core  = { workspace = true }
pyrameth-model = { workspace = true }
clap      = { workspace = true }
anyhow    = { workspace = true }
log       = { workspace = true }
env_logger= { workspace = true }
walkdir   = "2"
rayon     = { workspace = true }
tch       = "0.18"

[features]
default   = []
# Enable native POD5 reading (pure Rust, no libpod5 required).
# Pass through to pyrameth-core: cargo build --features pod5-pure
pod5-pure = ["pyrameth-core/pod5-pure"]
